CPL Library now compiled as a shared library. Demo application makefile now reflects this change.

--- a/cpl/makefile
+++ b/cpl/makefile
@@ -10,10 +10,7 @@
 #            _______\/////////__\///______________\///////////////__
 #
 
-
-#                            Includes
-
-# Platform include file location, imports C-language and Fortran compilers
+# Get compilers and base flags from platform include file 
 MAKEINCPATH= ../make
 include $(MAKEINCPATH)/platform.inc
 
@@ -25,7 +22,7 @@ objdir = obj
 srcdir = src
 libdir = lib
 includedir = include
-libsrcdir = $(srcdir)/libsrc
+coresrcdir = $(srcdir)/core
 binddir = $(srcdir)/bindings
 utilsdir = $(srcdir)/utils
 fbinddir = $(binddir)/fortran
@@ -33,85 +30,72 @@ cbinddir = $(binddir)/c
 cppbinddir = $(binddir)/cpp
 
 # Targets 
-lib = $(libdir)/libcpl.a
+lib = $(libdir)/libcpl.so
 
 # Source files, headers and objects
-libsrc = CPL_module.f90 CPL_methods.f90
-libsrcfiles = $(addprefix $(libsrcdir)/, $(libsrc))
-libobjfiles = $(addprefix $(objdir)/, $(libsrc:.f90=.o))
-libmodfiles = $(addprefix $(objdir)/, *.mod)
+coresrc = CPL_module.f90 CPL_methods.f90 
+coresrcfiles = $(addprefix $(coresrcdir)/, $(coresrc))
+coreobjfiles = $(addprefix $(objdir)/, $(coresrc:.f90=.o))
 
-fbindsrc = $(fbinddir)/CPL.f90
-fbindobj = $(objdir)/CPL.o
+fbindsrc = CPL.f90
+fbindsrcfile = $(addprefix $(fbinddir)/, $(fbindsrc))
+fbindobjfile = $(addprefix $(objdir)/, $(fbindsrc:.f90=.o))
 
-cbindheader = $(cbinddir)/CPLC.h
-cbindsrc = $(cbinddir)/CPLC.f90
-cbindobj = $(objdir)/CPLC.o
+cbindhdrfile = $(cbinddir)/CPLC.h
+cbindsrcfile = $(cbinddir)/CPLC.f90
+cbindobjfile = $(objdir)/CPLC.o
 
-cppbindheader = $(cppbinddir)/CPLCPP.h $(cppbinddir)/CPL.h
-cppbindsrc = $(cppbinddir)/CPLCPP.cpp
-cppbindobj = $(objdir)/CPLCPP.o
+cppbindsrc = CPLCPP.cpp
+cppbindhdr = $(cppbindsrc:.cpp=.h) CPL.h
+cppbindsrcfiles = $(addprefix $(cppbinddir)/, $(cppbindsrc))
+cppbindhdrfiles = $(addprefix $(cppbinddir)/, $(cppbindhdr))
+cppbindobjfiles = $(addprefix $(objdir)/, $(cppbindsrc:.cpp=.o))
 
 utilssrc = CPL_ndArray.cpp CPL_cartCreate.cpp
-utilsheaders = $(utilssrc:.cpp=.h) 
+utilshdr = $(utilssrc:.cpp=.h)
 utilssrcfiles = $(addprefix $(utilsdir)/, $(utilssrc))
-utilsheaderfiles = $(addprefix $(utilsdir)/, $(utilsheaders))
+utilshdrfiles = $(addprefix $(utilsdir)/, $(utilshdr))
 utilsobjfiles = $(addprefix $(objdir)/, $(utilssrc:.cpp=.o))
 
+allobjfiles = $(coreobjfiles) $(fbindobjfile) $(cbindobjfile) \
+              $(cppbindobjfiles) $(utilsobjfiles)
 
-
-#                          Flags 
-FFLAGS += -J$(objdir) -fPIC
+# Define flags and compilers/linkers specific to this makefile
+FFLAGS += -J$(includedir) -fPIC
 CFLAGS += -fPIC
-
-
+LINK = gcc
+LFLAGS = -shared
 
 #                         Targets
 
 # Default: make both the fortran and the c libraries
-all: fortran c cpp utilities
-
-# This makefile requires an argument, help if none provided
-help:
-	@echo "Target must be specified as either:"
-	@echo ""
-	@echo "     all"
-	@echo "     fortran"
-	@echo "     c"
-	@echo "     cpp"
-	@echo "     utilities"
-	@echo ""
+default: core fortran c cpp utilities link
 
 # Declare phony targets
 .phony.: fortran c cpp utilities
-fortran: $(lib)
-c: $(lib) $(cbindobj)
-cpp: $(lib) $(cbindobj) $(cppbindobj) $(utils)
+fortran: core $(fbindobjfile) 
+c: core $(fbindobjfile) $(cbindobjfile)
+cpp: core $(fbindobjfile) $(cbindobjfile) $(cppbindobjfiles) $(utilsobjfiles)
 
 # Fortran bindings
-$(lib): $(objdir) $(libdir) $(includedir) $(libobjfiles) $(fbindsrc)
-	$(F90) $(FFLAGS) -c $(fbindsrc) -o $(fbindobj)
-	@ar cr $(lib) $(libobjfiles)
-	@cp $(libmodfiles) $(includedir)
+$(fbindobjfile): core $(fbindsrcfile)
+	$(F90) $(FFLAGS) -c $(fbindsrcfile) -o $(fbindobjfile)
 
 # C bindings: create the lib objects first, overwrite lib including CPLC
-$(cbindobj): $(lib)
-	$(F90) $(FFLAGS) -c $(cbindsrc) -o $(cbindobj)
-	@ar cr $(lib) $(libobjfiles) $(cbindobj)
-	@cp $(cbindheader) $(includedir)
+$(cbindobjfile): core $(cbindsrcfile)
+	$(F90) $(FFLAGS) -c $(cbindsrcfile) -o $(cbindobjfile)
+	@cp $(cbindhdrfile) $(includedir)
 
 # C++ bindings: create lib and c bindings first, overwrite lib including CPLCPP
-$(cppbindobj): $(lib) $(cbindobj)
-	$(CPP) $(CFLAGS) -I$(cbinddir) -c $(cppbindsrc) -o $(cppbindobj)
-	@ar cr $(lib) $(libobjfiles) $(cbindobj) $(cppbindobj)
-	@cp $(cppbindheader) $(includedir)
+$(cppbindobjfiles): core $(cbindobjfile) 
+	$(CPP) $(CFLAGS) -I$(cbinddir) -c $(cppbindsrcfiles) -o $(cppbindobjfiles)
+	@cp $(cppbindhdrfiles) $(includedir)
 
 # Utilities
-utilities: $(lib) $(utilsobjfiles)
-	@ar cr $(lib) $(utilsobjfiles) 
-	@cp $(utilsheaderfiles) $(includedir)
+utilities: core $(utilsobjfiles) 
+	@cp $(utilshdrfiles) $(includedir)
 
-# Targets
+# Directory rules 
 $(objdir):
 	mkdir -p $(objdir)
 $(libdir):
@@ -119,12 +103,18 @@ $(libdir):
 $(includedir):
 	mkdir -p $(includedir)
 
-# Compilation rule for library object files (written in Fortran)
-$(libobjfiles): $(objdir)/%.o : $(libsrcdir)/%.f90
+# Compilation rules for library object files (written in Fortran)
+core: $(objdir) $(libdir) $(includedir) $(coreobjfiles)
+$(coreobjfiles): $(objdir)/%.o : $(coresrcdir)/%.f90
 	$(F90) $(FFLAGS) -c $< -o $@
 
+# Utils compilation rules
 $(utilsobjfiles): $(objdir)/%.o : $(utilsdir)/%.cpp
-	$(CPP) $(CFLAGS) -c $< -o $@
+	$(CPP) $(CFLAGS) -I$(utilsdir) -c $< -o $@
+
+# Link static lib to dynamic (shared) library
+link: $(objdir) $(libobjfiles) $(utilsobjfiles)
+	$(LINK) $(LFLAGS) -o $(lib) $(allobjfiles)
 
 # Clean
 clean:
