Added variables in make template for shared library flag and Fortran module location. Moved template.inc to gcc.inc.

--- a/demo/makefile
+++ b/demo/makefile
@@ -1,10 +1,11 @@
+
+# Get compilers and base flags from platform include file 
+MAKEINCPATH= ../make
+include $(MAKEINCPATH)/platform.inc
+
 # Executable paths (to be built)
 MDEXE = run/md/mdProgram
 CFDEXE = run/cfd/cfdProgram
-
-# MPI compiler wrappers
-CPP = mpic++
-F90 = mpif90
 
 # Include header/module and library flags
 PWD = $(shell pwd)
@@ -22,12 +23,12 @@ cpp-fortran: md_cpp cfd_fortran
 fortran-cpp: md_fortran cfd_cpp
 fortran-fortran: md_fortran cfd_fortran
 md_cpp:
-	$(CPP) md/md.cpp $(CPL_INC) $(CPL_LIB) $(FORTRAN_LIBS) -o $(MDEXE)
+	$(CPP) $(CFLAGS) md/md.cpp $(CPL_INC) $(CPL_LIB) $(FORTRAN_LIBS) -o $(MDEXE)
 md_fortran:
-	$(F90) md/md.f90 $(CPL_INC) $(CPL_LIB) $(C_LIBS) -o $(MDEXE) 
+	$(F90) $(FFLAGS) md/md.f90 $(CPL_INC) $(CPL_LIB) $(C_LIBS) -o $(MDEXE) 
 cfd_cpp:
-	$(CPP) cfd/cfd.cpp $(CPL_INC) $(CPL_LIB) $(FORTRAN_LIBS) -o $(CFDEXE) 
+	$(CPP) $(CFLAGS) cfd/cfd.cpp $(CPL_INC) $(CPL_LIB) $(FORTRAN_LIBS) -o $(CFDEXE) 
 cfd_fortran:
-	$(F90) cfd/cfd.f90 $(CPL_INC) $(CPL_LIB) $(C_LIBS) -o $(CFDEXE) 
+	$(F90) $(FFLAGS) cfd/cfd.f90 $(CPL_INC) $(CPL_LIB) $(C_LIBS) -o $(CFDEXE) 
 clean:
 	rm $(MDEXE) $(CFDEXE)
