Removed MD sockets from md-cfd-framework. I don't think this is a good thing to do just yet, due to differences in packing parameters, etc.

--- a/demo/md-cfd-framework/makefile
+++ b/demo/md-cfd-framework/makefile
@@ -22,7 +22,7 @@ LD_FLAGS = $(CPL_FLAGS)
 MD_DIR = md
 MD_CPP_DIR = $(MD_DIR)/cpp
 MD_F90_DIR = $(MD_DIR)/fortran
-MD_CPP_SRC = socket.cpp main.cpp
+MD_CPP_SRC = main.cpp
 MD_F90_SRC = main.f90
 MD_CPP_SRC_FILES = $(addprefix $(MD_CPP_DIR)/, $(MD_CPP_SRC)) 
 MD_F90_SRC_FILES = $(addprefix $(MD_F90_DIR)/, $(MD_F90_SRC)) 
