Changed path in makefile for old_topology_test

--- a/demo/old_topology_test/makefile
+++ b/demo/old_topology_test/makefile
@@ -7,9 +7,9 @@ cleanables = $(exe)
 test_src = test_coupler.f90
 flags = -O0 -traceback -g -check all
 objs = $(addprefix $(obj_dir)/, $(test_src:.f90=.o))
-libdir = ../cpl/lib/
-incdir = ../cpl/include/
-lib = ../cpl/lib/libcpl.so
+libdir = ../../cpl/lib/
+incdir = ../../cpl/include/
+lib = ../../cpl/lib/libcpl.so
 c_libs = -lc -lstdc++
 
 ## Compilation rules
