Added update to apt-get as it cannot find gfortran

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ cache:
   apt: true
 
 before_install:
+    - sudo apt-get update -q
     - sh ./make/travis/travis-install-fortran.sh $fortran
     - sh ./make/travis/travis-install-gcc.sh $c++
     - test -n $CC  && unset CC
