--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ python:
     - 2.7
 
 env:
-    - MPI=mpich3 GCC_VERSION=5 fortran=gfortran
+    - MPI=mpich3 GCC_VERSION=5
 
 branches:
   only:
@@ -30,21 +30,16 @@ cache:
 
 before_install:
 
-    #If not gfortran then we'll need to get elsewhere 
-    #- if [ ${fortran} != "gfortran" ];
-    #  then sh ./make/travis/travis-install-fortran.sh $fortran;
-    #  else echo "Getting gfortran from c++ repo";
-    #  fi
     - sh ./make/travis/travis-install-gcc.sh 'gcc-'$GCC_VERSION;
-    - sh ./make/travis/travis-install-fortran.sh $fortran
+    - sh ./make/travis/travis-install-fortran.sh 'gfortran-'$GCC
     - test -n $CC  && unset CC
     - test -n $CXX && unset CXX
-    - alias gcc='gcc-'$GCC_VERSION
-    - alias cc='gcc-'$GCC_VERSION
-    - alias g++='g++-'$GCC_VERSION
-    - alias c++='c++-'$GCC_VERSION
-    - alias gfortran='gfortran-'$GCC_VERSION
-    - which gfortran
+#    - alias gcc='gcc-'$GCC_VERSION
+#    - alias cc='gcc-'$GCC_VERSION
+#    - alias g++='g++-'$GCC_VERSION
+#    - alias c++='c++-'$GCC_VERSION
+#    - alias gfortran='gfortran-'$GCC_VERSION
+#    - which gfortran
     - export MPI_BUILD_DIR=$TRAVIS_BUILD_DIR/mpi
     - sh ./make/travis/travis-install-mpi.sh $MPI $MPI_BUILD_DIR
     - export MPI_DIR=$MPI_BUILD_DIR/$MPI
@@ -55,22 +50,25 @@ install:
     - cd ./cpl
     - make
 
-before_script:
-    - export PATH=$MPI_DIR/bin:$PATH
-    - cd ../demo
-    - make
-    - MPIEXEC='mpiexec'
+#before_script:
+#    - export PATH=$MPI_DIR/bin:$PATH
+#    - cd ../demo/md-cfd-framework/
+#    - make cpp-fortran
+#    - MPIEXEC='mpiexec'
 
-script:
-    - cd ./run
-    - echo "test"
+#script:
+#    - cd ./run
+#    - echo "test"
 #    - $MPIEXEC -n 8 ./md/mdProgram : -n 4 ./cfd/cfdProgram -v -f --no-builddir --exclude=spawn
 
-after_failure:
-    - which mpif90
-    - locate mpif90
-    - echo $MPI_BUILD_DIR $CXX $MPI_DIR
-    - cat $MPI_BUILD_DIR/config.log
+after_success:
+     - echo "Build Success"
+
+#after_failure:
+#    - which mpif90
+#    - locate mpif90
+#    - echo $MPI_BUILD_DIR $CXX $MPI_DIR
+#    - cat $MPI_BUILD_DIR/config.log
 
 
 
