--- a/cpl/src/bindings/python/cplpy/tests/templates/COUPLER.in
+++ b/cpl/src/bindings/python/cplpy/tests/templates/COUPLER.in
@@ -35,12 +35,12 @@ DENSITY_CFD
 #
 # -----------------------------------------------------------------------------
 OVERLAP_EXTENTS
-1
-18
-1
-6
-1
-18
+$[olap_xlo]
+$[olap_xhi]
+$[olap_ylo]
+$[olap_yhi]
+$[olap_zlo]
+$[olap_zhi]
 
 ##############################################################################
 ##
@@ -60,11 +60,11 @@ CONSTRAINT_INFO
 3
 0
 1
+18
+1
 6
 1
-2
-1
-1
+18
 
 ###############################################################################
 #
@@ -73,7 +73,7 @@ CONSTRAINT_INFO
 #
 # -----------------------------------------------------------------------------
 TIMESTEP_RATIO
-50
+$[tstep_ratio]
 
 
 ###############################################################################
@@ -100,9 +100,9 @@ MATCH_CELLSIZE
 #
 # -----------------------------------------------------------------------------
 CPL_CFD_BC_XYZ
-1
-1
-1
+$[cfd_bcx]
+$[cfd_bcy]
+$[cfd_bcz]
 
 ###############################################################################
 #
