--- a/demo/sockets/OpenFOAM/OpenFOAM-3.0.1/Makefile
+++ b/demo/sockets/OpenFOAM/OpenFOAM-3.0.1/Makefile
@@ -3,3 +3,6 @@ all:
 
 clean:
 	cd cpl-socket/ && ./Allwclean
+
+patch-scotch:                                                                                                                                                                                                                                    
+	patch OpenFOAM-$(FOAM_CPL_VERSION)/src/parallel/decompose/ptscotchDecomp/ptscotchDecomp.C ./cpl-socket/config/ptscotchDecomp.patch
