--- a/demo/sockets/OpenFOAM/OpenFOAM-3.0.1/Makefile
+++ b/demo/sockets/OpenFOAM/OpenFOAM-3.0.1/Makefile
@@ -6,3 +6,6 @@ clean:
 
 patch-scotch:                                                                                                                                                                                                                                    
 	patch OpenFOAM-$(FOAM_CPL_VERSION)/src/parallel/decompose/ptscotchDecomp/ptscotchDecomp.C ./cpl-socket/config/ptscotchDecomp.patch
+
+switch-pstream:
+	bash cpl-socket/config/switch-pstream.sh
