New interface added to the library.

--- a/cpl/src/bindings/python/cplpy/tests/templates/COUPLER.in
+++ b/cpl/src/bindings/python/cplpy/tests/templates/COUPLER.in
@@ -59,13 +59,12 @@ $[olap_zhi]
 CONSTRAINT_INFO
 3
 0
-1
-18
-1
-6
-1
-18
-
+$[cnst_xlo]
+$[cnst_xhi]
+$[cnst_ylo]
+$[cnst_yhi]
+$[cnst_zlo]
+$[cnst_zhi]
 ###############################################################################
 #
 #   timestep ratio (integer) 
