Testing mpi4py and tests attempt 4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,8 @@ install:
 
 before_script:
     - export PATH=$MPI_DIR/bin:$PATH
+    - export CPL_PATH=`pwd`
+    - source $CPL_PATH/SOURCEME.sh
     - pushd .
     - cd ../demo/md-cfd-framework/
     - popd
