--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,9 @@ before_script:
     - export PATH=$MPI_DIR/bin:$PATH
     - export CPL_PATH=`pwd`
     - source $CPL_PATH/SOURCEME.sh
+    - ls `pip -V | cut -f4 -d " "`
+      # Add virtual env python dist-packages directory to python path
+    - export PYTHONPATH=`pip -V | cut -f4 -d " "`:$PYTHONPATH
     - pushd .
     - cd ../demo/md-cfd-framework/
     - popd
@@ -47,7 +50,6 @@ before_script:
 
 
 script:
-    - echo "test scripts here"
     - make test
 #    - $MPIEXEC -n 8 ./md/mdProgram : -n 4 ./cfd/cfdProgram -v -f --no-builddir --exclude=spawn
 
