--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_script:
     - export CPL_PATH=`pwd`
     - source $CPL_PATH/SOURCEME.sh
     - pushd .
-    - cd ../demo/md-cfd-framework/
+#    - cd ../demo/md-cfd-framework/
     - popd
     - MPIEXEC='mpiexec'
     - echo "Make demo here"
