Introduced CPL_finalize to MPI_COMM_FREE all communicators in an effort to remove errors on Travis leaked context IDs detected (and valgrind memory leaks). Added check to cpl library send and recv to ensure CPL_setup has been called. Changed examples so they call CPL_finalize. Added valgrind apt-get to travis and an test/valgrind with send and recv to ensure memory leaks do not exist in the CPL library. An input file is used to allow quick permutations of cases to be explored with pytest (to do)

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,16 +38,15 @@ before_script:
     - export CPL_PATH=`pwd`
     - source $CPL_PATH/SOURCEME.sh
     - pushd .
-#    - cd ../demo/md-cfd-framework/
     - popd
     - MPIEXEC='mpiexec'
-    - echo "Make demo here"
-#    - make cpp-fortran
-
+    - sudo apt-get -qq update
+    - sudo apt-get install -qq valgrind
 
 script:
     - make test-all
     - make test-examples
+    - make test-valgrind
 
 after_success:
      - echo "Build Success"
