Corrected utils source code update. Moved WORLD_COMM communicator in CPL_finalize for case before setup. Added guess of CPL_PATH based on folder structure in a number of files. Add a few COMM_FREE to examples to remove error messages. Changed MPI_cart_create periodic input to logicals (integers for openmpi i think). Changed send to ssend in CPL_send to try to remove a MPI_request leak (not fixed yet).

--- a/website/.htaccess
+++ b/website/.htaccess
@@ -6,6 +6,9 @@ DirectoryIndex index.html index.htm index.php index.shtml index.shtm
 
 SetEnvIfNoCase Request_URI "\.(?:gif|jpe?g|png)$" no-gzip
 
+Options +Includes
+AddType text/html .shtml
+AddOutputFilter INCLUDES .shtml
 #Options -MultiViews
 #RewriteEngine On
 #RewriteCond %{REQUEST_FILENAME} !-f
