Added CPLSocketFOAM::unpackPorousForce, fixed error with symmetric tensor, added src/solvers/CPLporousIcoFoam to socket examples and commented CPL::set_timing as this causes a 8 byte to 12 byte MPI bcast error. Also commented out velBCRegion[3] = velBCRegion[2]; line as whole olap region is now exchanged

--- a/examples/sockets/OpenFOAM/OpenFOAM-3.0.1/cpl-socket/Makefile
+++ b/examples/sockets/OpenFOAM/OpenFOAM-3.0.1/cpl-socket/Makefile
@@ -1,9 +1,11 @@
 all:
 	@wmake libso src/CPLSocketFOAM
 	@wmake src/solvers/CPLIcoFoam
+	@wmake src/solvers/CPLporousIcoFoam
 clean:
 	@wclean src/CPLSocketFOAM
 	@wclean src/solvers/CPLIcoFoam
+	@wclean src/solvers/CPLporousIcoFoam
 	@rm -r lib
 	@rm -r bin
 patch-scotch:                                                                                                                                                                                                                                    
