--- a/examples/sockets/examples/Granlammps/single/single.in
+++ b/examples/sockets/examples/Granlammps/single/single.in
@@ -26,7 +26,7 @@ run_style	verlet
 
 fix		    1 all nve/sphere
 variable	g equal 9.81 # Add gravity
-fix 		2 all gravity $g vector 0 0 -1
+#fix 		2 all gravity $g vector 0 0 -1
 # Add wall position and contact parameters
 fix 		3 all wall/gran 2.9e4 0.2 0.25 zplane 0.000000 1.000000
 
@@ -36,8 +36,9 @@ variable	vz equal vz[1]
 variable	forcez equal fz[1]
 
 fix 		4 all print 5 "${step} ${xz} ${vz} ${forcez}" file thermo_output.txt screen yes
-dump        5 all dcd 10 vmd_out.dcd
-fix         6 all cpl/init region all
+fix         5 all cpl/init region all
+
+dump        6 all dcd 10 vmd_out.dcd
 
 run		    10000
 
